post-DART paper is out

--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -141,7 +141,7 @@ B.S. in Aerospace Engineering, University of Illinois at Urbana-Champaign & \hfi
 % Work Experience
 \section{Work Experience}
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{NASA Jet Propulsion Laboratory} & \hfill Advisors: Steven Chesley, Davide Farnocchia \\[3.75pt]
+\textbf{NASA Jet Propulsion Laboratory} & \hfill Advisors: Dr. Steven Chesley, Dr. Davide Farnocchia \\[3.75pt]
 NSTGRO Visiting Technologist & \hfill May 2023 - Aug 2023 \\[3.75pt]
     \multicolumn{2}{@{}X@{}}{
         \begin{minipage}[t]{\linewidth}
@@ -223,13 +223,12 @@ Teaching Assistant for AE 352: Aerospace Dynamical Systems & \hfill Aug 2021 - D
         \begin{minipage}[t]{\linewidth}
             \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
                 \item[--] Focused on developing and teaching the curriculum's core dynamics course with aerospace applications.
-                \item[--] Syllabus emphasized on covering Newtonian, Lagrangian, and Hamiltonian mechanics to represent particle motion.
-                \item[--] Assisted 16 student teams with Project Clear Constellation, which called for novel methods to remove orbital debris.
+                \item[--] Syllabus covered Newtonian, Lagrangian, and Hamiltonian mechanics for rigid body motion.
+                \item[--] Guided 16 student teams with Project Clear Constellation, focusing on methods to remove orbital debris.
             \end{itemize}
         \end{minipage}
     }
 \end{tabularx}
-
 % \begin{tabularx}{\linewidth}{ @{}l r@{} }
 %     \textbf{University of Illinois at Urbana-Champaign} & \hfill Instructor: Dr. Huy Tran \\[3.75pt]
 %     Undergraduate Course Assistant for AE 199: Aerospace Computing & \hfill Jan 2020 - May 2020 \\[3.75pt]
@@ -242,13 +241,12 @@ Teaching Assistant for AE 352: Aerospace Dynamical Systems & \hfill Aug 2021 - D
 %             \end{minipage}
 %         }
 % \end{tabularx}
-
 %----------------------------------------------------------------------------------------
 %	SKILLS
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Programming Languages  &  Python, C/C++, MATLAB, Fortran \\[3.75pt]
+Programming Languages  &  Python, C/C++, MATLAB, R, Fortran \\[3.75pt]
 Software Tools  &  \LaTeX, Git \\[3.75pt]
 Prepackaged Tools  &  MONTE, GMAT, FreeFlyer \\[3.75pt]
 Operating Systems  &  Linux, MacOS, Windows \\[3.75pt]
@@ -261,7 +259,7 @@ Languages  &  English, Gujarati, Hindi, French \\[3.75pt]
 \section{Awards and Affiliations}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
 \textbf{NASA Space Technology Graduate Research Opportunities Fellow} & \hfill Aug 2022 - present \\[3.75pt]
-NSTGRO award from NASA Space Technology Mission Directorate & \hfill \\[3.75pt]
+NSTGRO fellowship from NASA Space Technology Mission Directorate & \hfill \\[3.75pt]
 \end{tabularx}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
 \textbf{ARCS Foundation Scholar Award} & \hfill Aug 2023 - present \\[3.75pt]
@@ -284,7 +282,7 @@ Aerospace Engineering Department at the University of Illinois at Urbana-Champai
 University of Illinois at Urbana-Champaign & \hfill \\[3.75pt]
 \end{tabularx}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-\textbf{Hans von Muldau Team Award for Best Team Project} & \hfill October 2019 \\[3.75pt]
+\textbf{Hans von Muldau Team Award for Best Project} & \hfill October 2019 \\[3.75pt]
 70\textsuperscript{th} International Astronautical Congress (IAC), Washington D.C. & \hfill \\[3.75pt]
 \end{tabularx}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
