--- a/pdfs/cv/pub_journal_prim.bib
+++ b/pdfs/cv/pub_journal_prim.bib
@@ -26,12 +26,17 @@
 }
 
 @article{Makadia_2024,
-	author = {\textbf{R. Makadia} and author 2 and author 3 and author 4},
-	journal = {The Planetary Science Journal},
-	publisher = {The American Astronomical Society},
-	title = "{Estimation of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}",
-	year = {2024},
-	volume = {in press}
+doi = {10.3847/PSJ/ad1bce},
+url = {https://dx.doi.org/10.3847/PSJ/ad1bce},
+year = {2024},
+month = {02},
+publisher = {The American Astronomical Society},
+volume = {5},
+number = {2},
+pages = {38},
+author = {\textbf{R. Makadia} and Steven R. Chesley and Davide Farnocchia and Shantanu P. Naidu and Damya Souami and Paolo Tanga and Kleomenis Tsiganis and Masatoshi Hirabayashi and Siegfried Eggl},
+title = {{Measurability of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}},
+journal = {The Planetary Science Journal},
 }
 
 @article{Li_2023,
