--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -17,6 +17,24 @@
     url = {https://www.hou.usra.edu/meetings/acm2023/pdf/2128.pdf}
 }
 
+@INPROCEEDINGS{2023ACM2,
+    author = {D. C. Richardson and H. F. Agrusa and B. Barbee and A. F. Cheng and S. R. Chesley and S. Eggl and E. G. Fahnestock and D. P. Hamilton and M. Hirabayashi and S. A. Jacobson and J. R. Lyzhoft and \textbf{R. Makadia} and J. McMahon and A. J. Meyer and S. Naidu and R. Nakano and P. Pravec and S. D. Raducan and D. J. Scheeres and P. Scheirich and S. R. Schwartz},
+    title = "{The dynamical state of the Didymos System before and after the DART Impact}",
+    booktitle = "{14th Asteroids, Comets, Meteors Conference}",
+    year = 2023,
+    month = jun,
+    url = {https://www.hou.usra.edu/meetings/acm2023/pdf/2040.pdf}
+}
+
+@INPROCEEDINGS{2023ACM3,
+    author = {R. Nakano and M. Hirabayashi and S.D. Raducan and P. Pravec and P. Scheirich and H.F. Agrusa and A.J. Meyer and D.C. Richardson and M. Jutzi and B. Barbee and \textbf{R. Makadia} and D. Farnocchia},
+    title = "{Mutual orbit perturbations due to Dimorphos's deformation after the DART impact}",
+    booktitle = "{14th Asteroids, Comets, Meteors Conference}",
+    year = 2023,
+    month = jun,
+    url = {https://www.hou.usra.edu/meetings/acm2023/pdf/2128.pdf}
+}
+
 @INPROCEEDINGS{2023DARTITM,
     author = {\textbf{R. Makadia} and Siegfried Eggl},
     title = "{Heliocentric beta ($\beta_\odot$) measurability}",
@@ -49,6 +67,15 @@
     year = 2022,
     month = dec,
     url = {https://ui.adsabs.harvard.edu/abs/2022AGUFM.P55F1634M}
+}
+
+@INPROCEEDINGS{2022FALLAGU2,
+    author = {{Richardson}, Derek C. and {Agrusa}, Harrison F. and {Barbee}, Brent and {Campo Bagatin}, Adriano and {Eggl}, Siegfried and {Ferrari}, Fabio and {Fahnestock}, Eugene and {Gkolias}, Ioannis and {Fuentes-Mu{\~n}oz}, Oscar and {Hirabayashi}, Masatoshi and {Jacobson}, Seth Andrew and {Karatekin}, Ozgur and {Jutzi}, Martin and {Lyzhoft}, Joshua R. and \textbf{R. Makadia} and {McMahon}, Jay and {Meyer}, Alex and {Michel}, Patrick and {Nakano}, Ryota and {Noiset}, Guillaume and {Raducan}, Sabina and {Rambaux}, Nicolas and {Schwartz}, Stephen R. and {Tsiganis}, Kleomenis and {Zhang}, Yun},
+    title = "{First Assessment of the Dynamical State of the Didymos Binary Asteroid System Before and After the DART Impact}",
+    booktitle = "{2022 AGU Fall Meeting}",
+    year = 2022,
+    month = dec,
+    url = {https://ui.adsabs.harvard.edu/abs/2022AGUFM.P52A..06R},
 }
 
 @INPROCEEDINGS{2022DARTITM,
