--- a/pdfs/cv/pub_journal_prim.bib
+++ b/pdfs/cv/pub_journal_prim.bib
@@ -17,42 +17,46 @@
 }
 
 @article{Chabot_2024,
-	author = {Nancy L. Chabot and author 2 and author 3 and author 4},
-	journal = {The Planetary Science Journal},
-	publisher = {The American Astronomical Society},
-	title = "{Achievement of the Planetary Defense Investigations of the Double Asteroid Redirection Test (DART) Mission}",
+	doi = {10.3847/PSJ/ad16e6},
+	url = {https://dx.doi.org/10.3847/PSJ/ad16e6},
 	year = {2024},
-	volume = {in press}
+	month = {02},
+	publisher = {The American Astronomical Society},
+	volume = {5},
+	number = {2},
+	pages = {49},
+	author = {Nancy L. Chabot and Andrew S. Rivkin and Andrew F. Cheng and Olivier S. Barnouin and Eugene G. Fahnestock and Derek C. Richardson and Angela M. Stickle and Cristina A. Thomas and Carolyn M. Ernst and R. Terik Daly and Elisabetta Dotto and Angelo Zinzi and Steven R. Chesley and Nicholas A. Moskovitz and Brent W. Barbee and Paul Abell and Harrison F. Agrusa and Michele T. Bannister and Joel Beccarelli and Dmitriy L. Bekker and Megan Bruck Syal and Bonnie J. Buratti and Michael W. Busch and Adriano Campo Bagatin and Joseph P. Chatelain and Sidney Chocron and Gareth S. Collins and Luca Conversi and Thomas M. Davison and Mallory E. DeCoster and J. D. Prasanna Deshapriya and Siegfried Eggl and Raymond C. Espiritu and Tony L. Farnham and Marin Ferrais and Fabio Ferrari and Dora Föhring and Oscar Fuentes-Muñoz and Igor Gai and Carmine Giordano and David A. Glenar and Edward Gomez and Dawn M. Graninger and Simon F. Green and Sarah Greenstreet and Pedro H. Hasselmann and Isabel Herreros and Masatoshi Hirabayashi and Marek Husárik and Simone Ieva and Stavro L. Ivanovski and Samuel L. Jackson and Emmanuel Jehin and Martin Jutzi and Ozgur Karatekin and Matthew M. Knight and Ludmilla Kolokolova and Kathryn M. Kumamoto and Michael Küppers and Fiorangela La Forgia and Monica Lazzarin and Jian-Yang Li and Tim A. Lister and Ramin Lolachi and Michael P. Lucas and Alice Lucchetti and Robert Luther and \textbf{R. Makadia} and Elena Mazzotta Epifani and Jay McMahon and Gianmario Merisio and Colby C. Merrill and Alex J. Meyer and Patrick Michel and Marco Micheli and Alessandra Migliorini and Kate Minker and Dario Modenini and Fernando Moreno and Naomi Murdoch and Brian Murphy and Shantanu P. Naidu and Hari Nair and Ryota Nakano and Cyrielle Opitom and Jens Ormö and J. Michael Owen and Maurizio Pajola and Eric E. Palmer and Pasquale Palumbo and Paolo Panicucci and Laura M. Parro and Jason M. Pearl and Antti Penttilä and Davide Perna and Elisabeta Petrescu and Petr Pravec and Sabina D. Raducan and K. T. Ramesh and Ryan Ridden-Harper and Juan L. Rizos and Alessandro Rossi and Nathan X. Roth and Agata Rożek and Benjamin Rozitis and Eileen V. Ryan and William H. Ryan and Paul Sánchez and Toni Santana-Ros and Daniel J. Scheeres and Peter Scheirich and Cem Berk Senel and Colin Snodgrass and Stefania Soldini and Damya Souami and Thomas S. Statler and Rachel Street and Timothy J. Stubbs and Jessica M. Sunshine and Nicole J. Tan and Gonzalo Tancredi and Calley L. Tinsman and Paolo Tortora and Filippo Tusberti and James D. Walker and C. Dany Waller and Kai Wünnemann and Marco Zannoni and Yun Zhang},
+	title = "{Achievement of the Planetary Defense Investigations of the Double Asteroid Redirection Test (DART) Mission}",
+	journal = {The Planetary Science Journal},
 }
 
 @article{Makadia_2024,
-doi = {10.3847/PSJ/ad1bce},
-url = {https://dx.doi.org/10.3847/PSJ/ad1bce},
-year = {2024},
-month = {02},
-publisher = {The American Astronomical Society},
-volume = {5},
-number = {2},
-pages = {38},
-author = {\textbf{R. Makadia} and Steven R. Chesley and Davide Farnocchia and Shantanu P. Naidu and Damya Souami and Paolo Tanga and Kleomenis Tsiganis and Masatoshi Hirabayashi and Siegfried Eggl},
-title = {{Measurability of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}},
-journal = {The Planetary Science Journal},
+	doi = {10.3847/PSJ/ad1bce},
+	url = {https://dx.doi.org/10.3847/PSJ/ad1bce},
+	year = {2024},
+	month = {02},
+	publisher = {The American Astronomical Society},
+	volume = {5},
+	number = {2},
+	pages = {38},
+	author = {\textbf{R. Makadia} and Steven R. Chesley and Davide Farnocchia and Shantanu P. Naidu and Damya Souami and Paolo Tanga and Kleomenis Tsiganis and Masatoshi Hirabayashi and Siegfried Eggl},
+	title = {{Measurability of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}},
+	journal = {The Planetary Science Journal},
 }
 
 @article{Li_2023,
-author = {Li, Jian-Yang and Hirabayashi, Masatoshi and Farnham, Tony L. and Sunshine, Jessica M. and Knight, Matthew M. and Tancredi, Gonzalo and Moreno, Fernando and Murphy, Brian and Opitom, Cyrielle and Chesley, Steve and Scheeres, Daniel J. and Thomas, Cristina A. and Fahnestock, Eugene G. and Cheng, Andrew F. and Dressel, Linda and Ernst, Carolyn M. and Ferrari, Fabio and Fitzsimmons, Alan and Ieva, Simone and Ivanovski, Stavro L. and Kareta, Teddy and Kolokolova, Ludmilla and Lister, Tim and Raducan, Sabina D. and Rivkin, Andrew S. and Rossi, Alessandro and Soldini, Stefania and Stickle, Angela M. and Vick, Alison and Vincent, Jean-Baptiste and Weaver, Harold A. and Bagnulo, Stefano and Bannister, Michele T. and Cambioni, Saverio and Bagatin, Adriano Campo and Chabot, Nancy L. and Cremonese, Gabriele and Daly, R. Terik and Dotto, Elisabetta and Glenar, David A. and Granvik, Mikael and Hasselmann, Pedro H. and Herreros, Isabel and Jacobson, Seth and Jutzi, Martin and Kohout, Tomas and La Forgia, Fiorangela and Lazzarin, Monica and Lin, Zhong-Yi and Lolachi, Ramin and Lucchetti, Alice and \textbf{R. Makadia} and Epifani, Elena Mazzotta and Michel, Patrick and Migliorini, Alessandra and Moskovitz, Nicholas A. and Orm{\"o}, Jens and Pajola, Maurizio and S{\'a}nchez, Paul and Schwartz, Stephen R. and Snodgrass, Colin and Steckloff, Jordan and Stubbs, Timothy J. and Trigo-Rodr{\'i}guez, Josep M.},
-title="{Ejecta from the DART-produced active asteroid Dimorphos}",
-journal={Nature},
-year={2023},
-month={04},
-day={01},
-volume={616},
-number={7957},
-pages={452-456},
-abstract={Some active asteroids have been proposed to be formed as a result of impact events1. Because active asteroids are generally discovered by chance only after their tails have fully formed, the process of how impact ejecta evolve into a tail has, to our knowledge, not been directly observed. The Double Asteroid Redirection Test (DART) mission of NASA2, in addition to having successfully changed the orbital period of Dimorphos3, demonstrated the activation process of an asteroid resulting from an impact under precisely known conditions. Here we report the observations of the DART impact ejecta with the Hubble Space Telescope from impact time T{\thinspace}+{\thinspace}15{\thinspace}min to T{\thinspace}+{\thinspace}18.5{\thinspace}days at spatial resolutions of around 2.1{\thinspace}km per pixel. Our observations reveal the complex evolution of the ejecta, which are first dominated by the gravitational interaction between the Didymos binary system and the ejected dust and subsequently by solar radiation pressure. The lowest-speed ejecta dispersed through a sustained tail that had a consistent morphology with previously observed asteroid tails thought to be produced by an impact4,5. The evolution of the ejecta after the controlled impact experiment of DART thus provides a framework for understanding the fundamental mechanisms that act on asteroids disrupted by a natural impact1,6.},
-issn={1476-4687},
-doi={10.1038/s41586-023-05811-4},
-url={https://doi.org/10.1038/s41586-023-05811-4}
+	author = {Li, Jian-Yang and Hirabayashi, Masatoshi and Farnham, Tony L. and Sunshine, Jessica M. and Knight, Matthew M. and Tancredi, Gonzalo and Moreno, Fernando and Murphy, Brian and Opitom, Cyrielle and Chesley, Steve and Scheeres, Daniel J. and Thomas, Cristina A. and Fahnestock, Eugene G. and Cheng, Andrew F. and Dressel, Linda and Ernst, Carolyn M. and Ferrari, Fabio and Fitzsimmons, Alan and Ieva, Simone and Ivanovski, Stavro L. and Kareta, Teddy and Kolokolova, Ludmilla and Lister, Tim and Raducan, Sabina D. and Rivkin, Andrew S. and Rossi, Alessandro and Soldini, Stefania and Stickle, Angela M. and Vick, Alison and Vincent, Jean-Baptiste and Weaver, Harold A. and Bagnulo, Stefano and Bannister, Michele T. and Cambioni, Saverio and Bagatin, Adriano Campo and Chabot, Nancy L. and Cremonese, Gabriele and Daly, R. Terik and Dotto, Elisabetta and Glenar, David A. and Granvik, Mikael and Hasselmann, Pedro H. and Herreros, Isabel and Jacobson, Seth and Jutzi, Martin and Kohout, Tomas and La Forgia, Fiorangela and Lazzarin, Monica and Lin, Zhong-Yi and Lolachi, Ramin and Lucchetti, Alice and \textbf{R. Makadia} and Epifani, Elena Mazzotta and Michel, Patrick and Migliorini, Alessandra and Moskovitz, Nicholas A. and Orm{\"o}, Jens and Pajola, Maurizio and S{\'a}nchez, Paul and Schwartz, Stephen R. and Snodgrass, Colin and Steckloff, Jordan and Stubbs, Timothy J. and Trigo-Rodr{\'i}guez, Josep M.},
+	title="{Ejecta from the DART-produced active asteroid Dimorphos}",
+	journal={Nature},
+	year={2023},
+	month={04},
+	day={01},
+	volume={616},
+	number={7957},
+	pages={452-456},
+	issn={1476-4687},
+	doi={10.1038/s41586-023-05811-4},
+	url={https://doi.org/10.1038/s41586-023-05811-4}
 }
 
 @article{Statler_2022,
