--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -1,3 +1,12 @@
+@INPROCEEDINGS{2024FM,
+    author = {\textbf{R. Makadia} and Steven R Chesley and Davide Farnocchia and Siegfried Eggl},
+    title = "{A novel method for computing state transition matrices using the unscented transform}",
+    booktitle = "{Dynamics and Physics in the Solar System -- The legacy of Paolo Farinella and Andrea Milani}",
+    year = 2024,
+    month = jun,
+    url = {http://2024fm.dm.unipi.it/wp-content/uploads/2024/06/abstract-book.pdf}
+}
+
 @INPROCEEDINGS{2023DPS,
     author = {\textbf{R. Makadia} and Steven R Chesley and Davide Farnocchia and Siegfried Eggl},
     title = "{GRSS: An open-source small-body science tool for planetary defense}",
@@ -14,7 +23,8 @@
     booktitle = "{14th Asteroids, Comets, Meteors Conference}",
     year = 2023,
     month = jun,
-    url = {https://www.hou.usra.edu/meetings/acm2023/pdf/2128.pdf}
+    url = {https://ui.adsabs.harvard.edu/abs/2023LPICo2851.2128M},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @INPROCEEDINGS{2023ACM2,
@@ -23,7 +33,8 @@
     booktitle = "{14th Asteroids, Comets, Meteors Conference}",
     year = 2023,
     month = jun,
-    url = {https://www.hou.usra.edu/meetings/acm2023/pdf/2040.pdf}
+    url = {https://ui.adsabs.harvard.edu/abs/2023LPICo2851.2040R},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @INPROCEEDINGS{2023ACM3,
@@ -32,7 +43,8 @@
     booktitle = "{14th Asteroids, Comets, Meteors Conference}",
     year = 2023,
     month = jun,
-    url = {https://www.hou.usra.edu/meetings/acm2023/pdf/2128.pdf}
+    url = {https://ui.adsabs.harvard.edu/abs/2023LPICo2851.2354N},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @INPROCEEDINGS{2023DARTITM,
@@ -48,7 +60,8 @@
     title = "{Measurability of the heliocentric momentum enhancement of the Didymos system from the DART impact}",
     booktitle = "{8th IAA Planetary Defense Conference}",
     year = 2023,
-    month = apr
+    month = apr,
+    url = {https://az659834.vo.msecnd.net/eventsairwesteuprod/production-atpi-public/c432075f83124db382291610164021a1}
 }
 
 @INPROCEEDINGS{2023SFM,
@@ -92,6 +105,7 @@
     booktitle = "{44th AAS Guidance, Navigation, and Control Conference}",
     year = 2022,
     month = feb,
+    url = {https://doi.org/10.1007/978-3-031-51928-4_3}
 }
 
 @INPROCEEDINGS{2021DPS,
