--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -1,3 +1,37 @@
+@INPROCEEDINGS{2025PDCb,
+    author = {Steven R. Chesley and \textbf{R. Makadia} and David Herald and Davide Farnocchia and Shantanu P. Naidu and Alexandros Siakas and Damya Souami and Paolo Tanga and Sotirios Tsavdaridis and Kleomenis Tsiganis},
+    title = "{The post-DART heliocentric orbit of Didymos and implications for the effectiveness of the DART impact}",
+    booktitle = "{9th IAA Planetary Defense Conference}",
+    year = 2025,
+    month = may,
+}
+
+@INPROCEEDINGS{2025PDC,
+    author = {\textbf{R. Makadia} and Davide Farnocchia and Brent W. Barbee and Siegfried Eggl},
+    title = "{Design constraints for asteroid deflection campaigns based on $\Delta$V estimation timelines}",
+    booktitle = "{9th IAA Planetary Defense Conference}",
+    year = 2025,
+    month = may,
+}
+
+@INPROCEEDINGS{2025SFM,
+    author = {\textbf{R. Makadia} and Davide Farnocchia and Steven R Chesley and Siegfried Eggl},
+    title = "{A novel method for computing state transition matrices using the unscented transform}",
+    booktitle = "{35th AAS/AIAA Space Flight Mechanics Meeting}",
+    year = 2025,
+    month = jan,
+}
+
+@INPROCEEDINGS{2024IAUGA,
+    author = {\textbf{R. Makadia} and Siegfried Eggl},
+    title = "{GRSS: An open-source tool for high precision asteroid orbit determination and orbit propagation}",
+    booktitle = "{32nd International Astronomical Union (IAU) General Assembly}",
+    year = 2024,
+    month = aug,
+    url = {https://ui.adsabs.harvard.edu/abs/2024IAUGA..32P1989M},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @INPROCEEDINGS{2024FM,
     author = {\textbf{R. Makadia} and Steven R Chesley and Davide Farnocchia and Siegfried Eggl},
     title = "{A novel method for computing state transition matrices using the unscented transform}",
@@ -129,7 +163,7 @@
 
 @INPROCEEDINGS{2021DARTITM_2,
     author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock and Damya Souami and Davide Farnocchia},
-    title = "{Changing the heliocentric orbit of the Didymos system with DART: Implications for $\beta$ determination}",
+    title = "{Estimating $\beta$ via the heliocentric orbit of Didymos}",
     booktitle = "{June 2021 DART Investigation Team Meeting}",
     year = 2021,
     month = jun,
