--- a/pdfs/cv/pub_journal.bib
+++ b/pdfs/cv/pub_journal.bib
@@ -1,22 +1,59 @@
-@article{Richardson_2024,
-	author = {Derek C. Richardson and author 2 and author 3 and author 4},
-	journal = {The Planetary Science Journal},
-	publisher = {The American Astronomical Society},
-	title = "{The Dynamical State of the Didymos System Before and After the DART Impact}",
-	year = {2024},
-	volume = {under review}
+@article{Makadia2025c,
+	author = {\textbf{R. Makadia} and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
+	journal = {Celestial Mechanics and Dynamical Astronomy},
+	title = {{A Novel Method for Computing State Transition Matrices due to the Unscented Transform}},
+	year = {2025},
+	volume = {Under review},
+	publisher = {Springer},
 }
 
-@article{Hirabayashi_2024,
+@article{Makadia2025b,
+	author = {\textbf{R. Makadia} and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
+	journal = {Journal of Open Source Software},
+	title = {{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}},
+	year = {2025},
+	volume = {Under review},
+	publisher = {The Open Journal},
+	% doi = {10.21105/joss.07488},
+	% url = {https://doi.org/10.21105/joss.07488},
+	url = {https://github.com/openjournals/joss-reviews/issues/7488},
+	number = {0},
+	pages = {1-3},
+}
+
+@article{Makadia2025,
+	author    = {\textbf{R. Makadia} and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
+	journal   = {The Planetary Science Journal},
+	title     = {{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}},
+	year      = {2025},
+	volume    = {Under review},
+	publisher = {The American Astronomical Society},
+}
+
+@article{Hirabayashi2025,
 	author = {Masatoshi Hirabayashi and author 2 and author 3 and author 4},
 	journal = {Nature Communications},
 	publisher = {Nature Portfolio},
-	title = "{Kinetic deflection change due to target global curvature as revealed by NASA / DART.}",
-	year = {2024},
-	volume = {under review}
+	title = "{Elliptical ejecta of asteroid Dimorphos is due to its surface curvature}",
+	year = {2025},
+	volume = {In press},
 }
 
-@article{Chabot_2024,
+@article{Richardson2024,
+	doi = {10.3847/PSJ/ad62f5},
+	url = {https://dx.doi.org/10.3847/PSJ/ad62f5},
+	year = {2024},
+	month = {08},
+	publisher = {The American Astronomical Society},
+	volume = {5},
+	number = {8},
+	pages = {182},
+	author = {Derek C. Richardson and Harrison F. Agrusa and Brent Barbee and Rachel H. Cueva and Fabio Ferrari and Seth A. Jacobson and \textbf{R. Makadia} and Alex J. Meyer and Patrick Michel and Ryota Nakano and Yun Zhang and Paul Abell and Colby C. Merrill and Adriano Campo Bagatin and Olivier Barnouin and Nancy L. Chabot and Andrew F. Cheng and Steven R. Chesley and R. Terik Daly and Siegfried Eggl and Carolyn M. Ernst and Eugene G. Fahnestock and Tony L. Farnham and Oscar Fuentes-Muñoz and Edoardo Gramigna and Douglas P. Hamilton and Masatoshi Hirabayashi and Martin Jutzi and Josh Lyzhoft and Riccardo Lasagni Manghi and Jay McMahon and Fernando Moreno and Naomi Murdoch and Shantanu P. Naidu and Eric E. Palmer and Paolo Panicucci and Laurent Pou and Petr Pravec and Sabina D. Raducan and Andrew S. Rivkin and Alessandro Rossi and Paul Sánchez and Daniel J. Scheeres and Peter Scheirich and Stephen R. Schwartz and Damya Souami and Gonzalo Tancredi and Paolo Tanga and Paolo Tortora and Josep M. Trigo-Rodríguez and Kleomenis Tsiganis and John Wimarsson and Marco Zannoni},
+	title = {{The Dynamical State of the Didymos System before and after the DART Impact}},
+	journal = {The Planetary Science Journal},
+}
+
+@article{Chabot2024,
 	doi = {10.3847/PSJ/ad16e6},
 	url = {https://dx.doi.org/10.3847/PSJ/ad16e6},
 	year = {2024},
@@ -30,7 +67,7 @@
 	journal = {The Planetary Science Journal},
 }
 
-@article{Makadia_2024,
+@article{Makadia2024,
 	doi = {10.3847/PSJ/ad1bce},
 	url = {https://dx.doi.org/10.3847/PSJ/ad1bce},
 	year = {2024},
@@ -44,7 +81,7 @@
 	journal = {The Planetary Science Journal},
 }
 
-@article{Li_2023,
+@article{Li2023,
 	author = {Li, Jian-Yang and Hirabayashi, Masatoshi and Farnham, Tony L. and Sunshine, Jessica M. and Knight, Matthew M. and Tancredi, Gonzalo and Moreno, Fernando and Murphy, Brian and Opitom, Cyrielle and Chesley, Steve and Scheeres, Daniel J. and Thomas, Cristina A. and Fahnestock, Eugene G. and Cheng, Andrew F. and Dressel, Linda and Ernst, Carolyn M. and Ferrari, Fabio and Fitzsimmons, Alan and Ieva, Simone and Ivanovski, Stavro L. and Kareta, Teddy and Kolokolova, Ludmilla and Lister, Tim and Raducan, Sabina D. and Rivkin, Andrew S. and Rossi, Alessandro and Soldini, Stefania and Stickle, Angela M. and Vick, Alison and Vincent, Jean-Baptiste and Weaver, Harold A. and Bagnulo, Stefano and Bannister, Michele T. and Cambioni, Saverio and Bagatin, Adriano Campo and Chabot, Nancy L. and Cremonese, Gabriele and Daly, R. Terik and Dotto, Elisabetta and Glenar, David A. and Granvik, Mikael and Hasselmann, Pedro H. and Herreros, Isabel and Jacobson, Seth and Jutzi, Martin and Kohout, Tomas and La Forgia, Fiorangela and Lazzarin, Monica and Lin, Zhong-Yi and Lolachi, Ramin and Lucchetti, Alice and \textbf{R. Makadia} and Epifani, Elena Mazzotta and Michel, Patrick and Migliorini, Alessandra and Moskovitz, Nicholas A. and Orm{\"o}, Jens and Pajola, Maurizio and S{\'a}nchez, Paul and Schwartz, Stephen R. and Snodgrass, Colin and Steckloff, Jordan and Stubbs, Timothy J. and Trigo-Rodr{\'i}guez, Josep M.},
 	title="{Ejecta from the DART-produced active asteroid Dimorphos}",
 	journal={Nature},
@@ -59,7 +96,7 @@
 	url={https://doi.org/10.1038/s41586-023-05811-4}
 }
 
-@article{Statler_2022,
+@article{Statler2022,
 	author = {Thomas S. Statler and Sabina D. Raducan and Olivier S. Barnouin and Mallory E. DeCoster and Steven R. Chesley and Brent Barbee and Harrison F. Agrusa and Saverio Cambioni and Andrew F. Cheng and Elisabetta Dotto and Siegfried Eggl and Eugene G. Fahnestock and Fabio Ferrari and Dawn Graninger and Alain Herique and Isabel Herreros and Masatoshi Hirabayashi and Stavro Ivanovski and Martin Jutzi and {\"O}zg{\"u}r Karatekin and Alice Lucchetti and Robert Luther and \textbf{R. Makadia} and Francesco Marzari and Patrick Michel and Naomi Murdoch and Ryota Nakano and Jens Orm{\"o} and Maurizio Pajola and Andrew S. Rivkin and Alessandro Rossi and Paul S{\'a}nchez and Stephen R. Schwartz and Stefania Soldini and Damya Souami and Angela Stickle and Paolo Tortora and Josep M. Trigo-Rodr{\'i}guez and Flaviane Venditti and Jean-Baptiste Vincent and Kai W{\"u}nnemann},
 	doi = {10.3847/PSJ/ac94c1},
 	journal = {The Planetary Science Journal},
@@ -73,7 +110,7 @@
 	year = {2022}
 }
 
-@article{Makadia_2022,
+@article{Makadia2022,
 	author = {\textbf{R. Makadia} and Sabina D. Raducan and Eugene G. Fahnestock and Siegfried Eggl},
 	doi = {10.3847/PSJ/ac7de7},
 	journal = {The Planetary Science Journal},
@@ -87,7 +124,7 @@
 	year = {2022}
 }
 
-@article{Richardson_2022,
+@article{Richardson2022,
 	author = {Derek C. Richardson and Harrison F. Agrusa and Brent Barbee and William F. Bottke and Andrew F. Cheng and Siegfried Eggl and Fabio Ferrari and Masatoshi Hirabayashi and {\"O}zg{\"u}r Karatekin and Jay McMahon and Stephen R. Schwartz and Ronald-Louis Ballouz and Adriano Campo Bagatin and Elisabetta Dotto and Eugene G. Fahnestock and Oscar Fuentes-Mu{\~n}oz and Ioannis Gkolias and Douglas P. Hamilton and Seth A. Jacobson and Martin Jutzi and Josh Lyzhoft and \textbf{R. Makadia} and Alex J. Meyer and Patrick Michel and Ryota Nakano and Guillaume Noiset and Sabina D. Raducan and Nicolas Rambaux and Alessandro Rossi and Paul S{\'a}nchez and Daniel J. Scheeres and Stefania Soldini and Angela M. Stickle and Paolo Tanga and Kleomenis Tsiganis and Yun Zhang},
 	doi = {10.3847/PSJ/ac76c9},
 	journal = {The Planetary Science Journal},
